--- a/docker/compose.dev.yml
+++ b/docker/compose.dev.yml
@@ -43,6 +43,29 @@ services:
     labels:
       - "service=delineate-app"
 
+  # Frontend Dashboard - React + Vite (Challenge 4: Observability Dashboard)
+  delineate-frontend:
+    build:
+      context: ../frontend
+      dockerfile: Dockerfile.dev
+    ports:
+      - "5173:5173"
+    volumes:
+      - ../frontend/src:/app/src
+      - ../frontend/index.html:/app/index.html
+      - /app/node_modules
+    environment:
+      - VITE_API_URL=http://localhost:3000
+      - VITE_JAEGER_URL=http://localhost:16686
+      - VITE_OTEL_ENDPOINT=http://localhost:4318/v1/traces
+      - VITE_SENTRY_DSN=https://20219e0cc8a0191561fad68afda39968@o4510511803269120.ingest.de.sentry.io/4510520963235920
+    depends_on:
+      - delineate-app
+    networks:
+      - delineate-network
+    labels:
+      - "service=delineate-frontend"
+
   # Background Worker - Export Job Processor
   delineate-worker:
     build:
@@ -159,116 +182,19 @@ services:
         max-file: "3"
 
   # =============================================================================
-  # OBSERVABILITY LAYER
+  # OBSERVABILITY LAYER (Challenge 4: Sentry + OpenTelemetry + Jaeger)
   # =============================================================================
   
-  # Jaeger - Distributed Tracing
+  # Jaeger - Distributed Tracing (Required for Challenge 4)
   delineate-jaeger:
     image: jaegertracing/all-in-one:latest
     container_name: delineate-jaeger
     ports:
-      - "16686:16686"
-      - "4318:4318"
-      - "14269:14269"
+      - "16686:16686"   # Jaeger UI
+      - "4318:4318"     # OTLP HTTP receiver
+      - "14269:14269"   # Admin port
     environment:
       - COLLECTOR_OTLP_ENABLED=true
-      - METRICS_STORAGE_TYPE=prometheus
-    networks:
-      - delineate-network
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
-
-  # Prometheus - Metrics Collection
-  prometheus:
-    image: prom/prometheus:latest
-    container_name: delineate-prometheus
-    ports:
-      - "9090:9090"
-    volumes:
-      - ./config/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
-      - prometheus-data:/prometheus
-    command:
-      - '--config.file=/etc/prometheus/prometheus.yml'
-      - '--storage.tsdb.path=/prometheus'
-      - '--storage.tsdb.retention.time=15d'
-      - '--web.console.libraries=/usr/share/prometheus/console_libraries'
-      - '--web.console.templates=/usr/share/prometheus/consoles'
-      - '--web.enable-lifecycle'
-    depends_on:
-      - delineate-app
-      - minio
-    networks:
-      - delineate-network
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
-
-  # Loki - Log Aggregation
-  loki:
-    image: grafana/loki:2.9.0
-    container_name: delineate-loki
-    ports:
-      - "3100:3100"
-    volumes:
-      - ./config/loki/loki-config.yml:/etc/loki/local-config.yaml:ro
-      - loki-data:/loki
-    command: -config.file=/etc/loki/local-config.yaml
-    healthcheck:
-      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:3100/ready || exit 1"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    networks:
-      - delineate-network
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
-
-  # Promtail - Log Shipper (sends logs to Loki)
-  promtail:
-    image: grafana/promtail:2.9.0
-    container_name: delineate-promtail
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ./config/promtail/promtail-config.yml:/etc/promtail/config.yml:ro
-    command: -config.file=/etc/promtail/config.yml
-    depends_on:
-      loki:
-        condition: service_healthy
-    networks:
-      - delineate-network
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
-
-  # Grafana - Visualization & Dashboards
-  grafana:
-    image: grafana/grafana:latest
-    container_name: delineate-grafana
-    ports:
-      - "3001:3000"
-    environment:
-      - GF_SECURITY_ADMIN_USER=admin
-      - GF_SECURITY_ADMIN_PASSWORD=admin
-      - GF_USERS_ALLOW_SIGN_UP=false
-      - GF_SERVER_ROOT_URL=http://localhost:3001
-      - GF_INSTALL_PLUGINS=grafana-clock-panel,grafana-simple-json-datasource
-    volumes:
-      - grafana-data:/var/lib/grafana
-      - ./config/grafana/provisioning:/etc/grafana/provisioning:ro
-    depends_on:
-      - prometheus
-      - loki
-      - delineate-jaeger
     networks:
       - delineate-network
     logging:
@@ -293,10 +219,4 @@ volumes:
   minio-data:
     driver: local
   redis-data:
-    driver: local
-  prometheus-data:
-    driver: local
-  loki-data:
-    driver: local
-  grafana-data:
     driver: local
