--- a/.env.example
+++ b/.env.example
@@ -14,17 +14,12 @@ S3_FORCE_PATH_STYLE=true
 # Redis Configuration (for job queue)
 REDIS_URL=redis://localhost:6379
 
-# Observability - Tracing
-SENTRY_DSN=
-OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318
+# Error Tracking - Sentry (Real-time error monitoring)
+SENTRY_DSN=https://your-sentry-dsn@sentry.io/project-id
 
 # Observability - Metrics (Prometheus)
 PROMETHEUS_ENABLED=true
 METRICS_PORT=9464
-
-# Observability - Logging (Loki)
-LOG_LEVEL=info
-LOG_FORMAT=json
 
 # Rate Limiting
 REQUEST_TIMEOUT_MS=30000
