--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -147,21 +147,35 @@ jobs:
     name: 🚀 Build and Push to Docker Hub
     runs-on: ubuntu-24.04
     needs: test # Must pass test first
-    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master') && github.repository_owner != 'fork'
     steps:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
 
+      - name: 🔍 Check Docker Hub credentials
+        id: check_secrets
+        run: |
+          if [ -z "${{ secrets.DOCKERHUB_USERNAME }}" ] || [ -z "${{ secrets.DOCKERHUB_TOKEN }}" ]; then
+            echo "has_secrets=false" >> $GITHUB_OUTPUT
+            echo "⚠️ Docker Hub credentials not configured. Skipping push."
+          else
+            echo "has_secrets=true" >> $GITHUB_OUTPUT
+          fi
+
       - name: 🐳 Set up Docker Buildx
+        if: steps.check_secrets.outputs.has_secrets == 'true'
         uses: docker/setup-buildx-action@v3
 
       - name: 🔐 Login to Docker Hub
+        if: steps.check_secrets.outputs.has_secrets == 'true'
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+        continue-on-error: true
 
       - name: 📋 Extract Docker metadata
+        if: steps.check_secrets.outputs.has_secrets == 'true'
         id: meta
         uses: docker/metadata-action@v5
         with:
@@ -172,6 +186,7 @@ jobs:
             type=ref,event=branch
 
       - name: 🚀 Build and Push to Docker Hub
+        if: steps.check_secrets.outputs.has_secrets == 'true'
         id: docker_build
         uses: docker/build-push-action@v6
         with:
@@ -188,6 +203,7 @@ jobs:
             VCS_REF=${{ github.sha }}
 
       - name: 📋 Image Summary
+        if: steps.check_secrets.outputs.has_secrets == 'true'
         run: |
           echo "## 🐳 Docker Image Published" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
