--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,10 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host 0.0.0.0",
-    "build": "npx tsc && vite build",
+    "dev": "npx vite --host 0.0.0.0",
+    "build": "vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "npx vite preview"
   },
   "dependencies": {
     "@opentelemetry/api": "^1.9.0",
